// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ToDo Component should display delete button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={false}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={[MockFunction]}
    handleToggleToDo={[MockFunction]}
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={[MockFunction]}
        >
          ✕
        </div>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": false,
            "onClick": [MockFunction],
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={[MockFunction]}
          >
            ✕
          </div>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": false,
              "onClick": [MockFunction],
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`The ToDo Component should display incomplete by default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={false}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={[MockFunction]}
    handleToggleToDo={[MockFunction]}
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={[MockFunction]}
        >
          ✕
        </div>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": false,
            "onClick": [MockFunction],
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={[MockFunction]}
          >
            ✕
          </div>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": false,
              "onClick": [MockFunction],
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`The ToDo Component should display the correct due date 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={false}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={[MockFunction]}
    handleToggleToDo={[MockFunction]}
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={[MockFunction]}
        >
          ✕
        </div>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": false,
            "onClick": [MockFunction],
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={[MockFunction]}
          >
            ✕
          </div>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": false,
              "onClick": [MockFunction],
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`The ToDo Component should display the correct label 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={false}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={[MockFunction]}
    handleToggleToDo={[MockFunction]}
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={[MockFunction]}
        >
          ✕
        </div>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={false}
            onClick={[MockFunction]}
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": false,
            "onClick": [MockFunction],
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={[MockFunction]}
          >
            ✕
          </div>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={false}
              onClick={[MockFunction]}
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": false,
              "onClick": [MockFunction],
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`The ToDo Component should should display the completed style when complete 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={true}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={[MockFunction]}
    handleToggleToDo={[MockFunction]}
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={true}
            onClick={[MockFunction]}
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={[MockFunction]}
        >
          ✕
        </div>,
      ],
      "className": "root complete",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={true}
            onClick={[MockFunction]}
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": true,
            "onClick": [MockFunction],
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={true}
              onClick={[MockFunction]}
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={[MockFunction]}
          >
            ✕
          </div>,
        ],
        "className": "root complete",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={true}
              onClick={[MockFunction]}
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": true,
              "onClick": [MockFunction],
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`The ToDo Component should should handle the handleDelete callback 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={false}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    handleToggleToDo={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={false}
            onClick={
              [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              }
            }
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
        >
          ✕
        </div>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={false}
            onClick={
              [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              }
            }
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": false,
            "onClick": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          },
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={false}
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={
              [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              }
            }
          >
            ✕
          </div>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={false}
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": false,
              "onClick": [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              },
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`The ToDo Component should should handle the handleToggle callback 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDo
    complete={false}
    created="2018-11-14T15:48:59.004Z"
    handleDelete={[MockFunction]}
    handleToggleToDo={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    label="Do something remarkable today"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form"
        >
          <input
            className="checkbox"
            defaultChecked={false}
            onClick={
              [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              }
            }
            type="checkbox"
          />
        </div>,
        <div
          className="item"
        >
          <span
            className="label"
          >
            Do something remarkable today
          </span>
          <br />
          <span
            className="created"
          >
            11/14/2018, 3:48 PM
          </span>
          <hr
            className="hr"
          />
        </div>,
        <div
          className="delete"
          onClick={[MockFunction]}
        >
          ✕
        </div>,
      ],
      "className": "root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="checkbox"
            defaultChecked={false}
            onClick={
              [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              }
            }
            type="checkbox"
          />,
          "className": "form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "checkbox",
            "defaultChecked": false,
            "onClick": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
            "type": "checkbox",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="label"
            >
              Do something remarkable today
            </span>,
            <br />,
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>,
            <hr
              className="hr"
            />,
          ],
          "className": "item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Do something remarkable today",
              "className": "label",
            },
            "ref": null,
            "rendered": "Do something remarkable today",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "11/14/2018, 3:48 PM",
              "className": "created",
            },
            "ref": null,
            "rendered": "11/14/2018, 3:48 PM",
            "type": "span",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "hr",
            },
            "ref": null,
            "rendered": null,
            "type": "hr",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "✕",
          "className": "delete",
          "onClick": [MockFunction],
        },
        "ref": null,
        "rendered": "✕",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form"
          >
            <input
              className="checkbox"
              defaultChecked={false}
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              type="checkbox"
            />
          </div>,
          <div
            className="item"
          >
            <span
              className="label"
            >
              Do something remarkable today
            </span>
            <br />
            <span
              className="created"
            >
              11/14/2018, 3:48 PM
            </span>
            <hr
              className="hr"
            />
          </div>,
          <div
            className="delete"
            onClick={[MockFunction]}
          >
            ✕
          </div>,
        ],
        "className": "root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="checkbox"
              defaultChecked={false}
              onClick={
                [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              type="checkbox"
            />,
            "className": "form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "checkbox",
              "defaultChecked": false,
              "onClick": [MockFunction] {
                "calls": Array [
                  Array [],
                ],
                "results": Array [
                  Object {
                    "isThrow": false,
                    "value": undefined,
                  },
                ],
              },
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="label"
              >
                Do something remarkable today
              </span>,
              <br />,
              <span
                className="created"
              >
                11/14/2018, 3:48 PM
              </span>,
              <hr
                className="hr"
              />,
            ],
            "className": "item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Do something remarkable today",
                "className": "label",
              },
              "ref": null,
              "rendered": "Do something remarkable today",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "11/14/2018, 3:48 PM",
                "className": "created",
              },
              "ref": null,
              "rendered": "11/14/2018, 3:48 PM",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "hr",
              },
              "ref": null,
              "rendered": null,
              "type": "hr",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "✕",
            "className": "delete",
            "onClick": [MockFunction],
          },
          "ref": null,
          "rendered": "✕",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
